# kquery

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cmdline.rs  main.rs
src/: compats.rs  filemgr.rs  io.rs  kbuild.rs  lib.rs  makefile.rs  metadata.rs  source.rs
