[package]
name = "kquery"
version = "0.1.0"
description = "Query tool for Linux kernel sources. Library"
license = "MIT"
authors = ["K <kayo@illumium.org>"]
categories = ["command-line-utilities"]
keywords = ["linux", "kernel", "query", "kbuild", "kconfig"]
homepage = "https://github.com/katyo/kquery"
repository = "https://github.com/katyo/kquery"
edition = "2021"

[workspace]
members = ["cli"]

[dependencies.anyhow]
version = "1"

[dependencies.educe]
version = "0.4"

[dependencies.pin-project]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.ciborium]
version = "0.2"
optional = true

[dependencies.lz4_flex]
version = "0.9"
optional = true

[dependencies.log]
version = "0.4"
features = ["max_level_trace", "release_max_level_off"]

[dependencies.tokio]
version = "1"
features = ["rt", "fs", "sync", "io-util"]

[dependencies.rlimit]
version = "0.8"

[features]
default = ["cache", "cbor", "lz4"]
default-dev = ["cache", "json", "pretty"]

cache = ["serde"]
json = ["serde_json"]
pretty = []
cbor = ["ciborium"]
lz4 = ["lz4_flex"]

# Enable unstable doc-cfg feature (for docs.rs)
doc-cfg = []

[package.metadata.docs.rs]
features = ["default-dev", "doc-cfg"]

[profile.release]
opt-level = 2
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false

[profile.release-fast]
inherits = "release"
opt-level = 3

[profile.release-tiny]
inherits = "release"
opt-level = "z"
panic = "abort"
