[package]
name = "kquery-cli"
version = "0.1.0"
description = "Query tool for Linux kernel sources. Command-line interface"
license = "MIT"
authors = ["K <kayo@illumium.org>"]
readme = "../README.md"
categories = ["command-line-utilities"]
keywords = ["linux", "kernel", "query", "kbuild", "kconfig"]
homepage = "https://github.com/katyo/kquery"
repository = "https://github.com/katyo/kquery"
edition = "2021"

[[bin]]
name = "kquery"
path = "src/main.rs"

[dependencies.paw]
version = "1"

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.lovely_env_logger]
version = "0.5"
optional = true

[dependencies.log]
version = "0.4"
features = ["max_level_trace", "release_max_level_off"]

[dependencies.globset]
version = "0.4"
optional = true

[dependencies.either]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.kquery]
path = ".."
default-features = false

[dependencies.futures-lite]
version = "1"
optional = true

[dependencies.async-walkdir]
version = "0.2"
optional = true

[features]
default = ["cbor", "lz4", "glob"]
default-min = ["cbor"]
default-dev = ["json", "logger", "glob", "alert-orphan-sources"]

json = ["kquery/json"]
cbor = ["kquery/cbor"]
lz4 = ["kquery/lz4"]

logger = ["lovely_env_logger"]
glob = ["globset", "either"]

# Show sources which does not found while indexing (for debug purpose)
alert-orphan-sources = ["futures-lite", "async-walkdir"]
